tests/invalid/Type_Invalid_12.whiley
function f((int&bool)[] p) -> int:
    return 0
    